# pycurl-wrapper

./: pyproject.toml  setup.py
debian/: control  rules
docs/: RelNotes-1.0.txt  RelNotes-1.1.txt  RelNotes-1.2.txt
py3curl-wrapper/: __init__.py
py3curl_wrapper/: __init__.py
pylib/: pycurl_wrapper.py
