[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py3curl-wrapper"
version = "2.1.1"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "Maintain a pool of deb packages from source and binary stocks"

[project.urls]
Homepage = "https://github.com/turnkeylinux/pycurl-wrapper"

[tool.setuptools]
packages = ["py3curl_wrapper"]
include-package-data = false

[tool.setuptools.package-data]
pool_lib = ["py.typed"]
