[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py3curl-wrapper"
version = "2.1.1"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = "GPL-3.0-or-later"
description = "Simplified wrapper for python-pycurl"

[project.urls]
Homepage = "https://github.com/turnkeylinux/pycurl-wrapper"

[tool.setuptools]
packages = ["py3curl_wrapper"]
include-package-data = false

[tool.setuptools.package-data]
py3curl_wrapper = ["py.typed"]
